# papercast-say

./: .gitignore  setup.cfg
papercast_say/: __init__.py  say.py
