[metadata]
name = papercast_say
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Say Processor plugin for Papercast
url = https://github.com/papercast-dev/papercast-say

[options]
packages = find:
install_requires =
    # Any dependencies required by the plugin

[options.entry_points]
papercast.processors =
    SayProcessor = papercast_say:SayProcessor
